[workspace]
members = ["day-1", "day-2", "day-3", "day-4", "day-5", "day-6", "day-7", "day-8", "day-9",
    "day-10", "day-11", "day-12", "day-13", "day-14", "day-15", "day-16", "day-17", "day-18",
    "day-19", "day-20", "day-21", "day-22", "day-23", "day-24", "day-25"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
